--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-n": "^16.0.2",
     "eslint-plugin-promise": "^6.1.1",
-    "jest": "^29.6.4"
+    "jest": "^29.6.4",
+    "supertest": "^6.3.3"
   }
 }
